fixing box-shadows for better visibility

--- a/src/app/components/albumdetails/albumdetails.component.scss
+++ b/src/app/components/albumdetails/albumdetails.component.scss
@@ -32,7 +32,8 @@
   display: flex;
   flex-wrap: wrap;
   background: #fff;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+  // box-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+  box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
   border: 1px solid #e5e7eb;
   border-radius: 8px;
   margin-bottom: 10px;
