--- a/src/app/components/user-details/user-details.component.scss
+++ b/src/app/components/user-details/user-details.component.scss
@@ -5,7 +5,8 @@
   .user-info.photo {
     background-color: #fff;
     border: 1px solid #e5e7eb;
-    box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+    // box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+    box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
     border-radius: 8px;
     padding: 20px;
     margin: 5px 5px 5px 0px;
@@ -52,7 +53,8 @@
   .user-actions {
     background-color: #fff;
     border: 1px solid #e5e7eb;
-    box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+    // box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+    box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
     border-radius: 8px;
     padding: 20px;
     margin: 5px 0px 5px 5px;
