--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -6,11 +6,14 @@
     border: 1px solid #e5e7eb;  
     background: #fff;
     border-radius: 8px;
+    justify-content: center;
+    align-items: center;
     li {
       display: flex;
       padding: 15px;
       border-radius: 6px;
-      box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+      // box-shadow: 0 30px 36px -13px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+      box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
       border: 1px solid #e5e7eb;  
       margin: 5px;
       background: #fff;
